--- a/landing.html
+++ b/landing.html
@@ -23,7 +23,7 @@
 
   <!-- Services -->
     <section class="services">
-      <div class="container grid-3">
+      <div class="container grid-3 center">
         <div>
           <i class="fab fa-youtube fa-3x"></i>
           <h3>YouTube</h3>
@@ -44,7 +44,7 @@
 
     <!-- About -->
 
-    <section class="about">
+    <section class="about bg-light">
       <div class="container">
         <div class="grid-2">
           <div class="center">
@@ -58,7 +58,7 @@
       </div>
     </section>
 
-    <footer class="center">
+    <footer class="center bg-dark">
       <p>Tracker Hours &copy; 2019</p>
     </footer>
 
