--- a/landing.html
+++ b/landing.html
@@ -27,17 +27,17 @@
         <div>
           <i class="fab fa-youtube fa-3x"></i>
           <h3>YouTube</h3>
-          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, facere!</p>
+          <p>We post weekly to keep you on track</p>
         </div>
         <div>
             <i class="fas fa-chalkboard-teacher fa-3x"></i>
             <h3>Courses</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, facere!</p>
+            <p>Learn the skills that will take you to the next level</p>
           </div>
           <div>
               <i class="fas fa-briefcase fa-3x"></i>
               <h3>Freelancing Projects</h3>
-              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloribus, facere!</p>
+              <p>Be your own boss!</p>
             </div>
       </div>
     </section>
@@ -51,7 +51,7 @@
             <i class="fas fa-laptop-code fa-10x"></i>
           </div>
           <div>
-            <h3>About Us</h3>
+            <h3>ABOUT US</h3>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam repellendus pariatur ea culpa sapiente distinctio omnis adipisci dolor doloribus at minus facere sunt dolores dolore labore earum consectetur officia rerum velit, minima laudantium expedita! Ex tempore alias eligendi officia dolorum!
           </div>
         </div>
